# Charge

./: .gitattributes  Cargo.toml
src/: game.rs  main.rs  mainloop.rs
src/assets/: image.rs  mod.rs  model.rs
src/graphics/: mesh.rs  mod.rs  sdf.rs  shader.rs  text.rs  texture.rs
src/shaders/: default.frag  default.vert
