[package]
name = "charge"
version = "0.1.0"
authors = ["Agorgianitis Loukas <agorglouk@gmail.com>"]

[dependencies]
time = "0.1.40"
glutin = "*"
gl = { path = "deps/gl" }
tobj = "0.1.6"
image = "0.20.0"
nalgebra-glm = "0.1.1"

[target.'cfg(target_os = "android")'.dependencies]
android_glue = "0.2.3"
